--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>NovaCityRP</title>
+    <title>NovaCityRP Website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="assets/css/main.css">
     <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
@@ -50,7 +50,8 @@
               ImNotPalma, ImAndrew</p>
           </header>
           <ul class="icons major">
-            <li><span class="icon solid fa-code major style3"><span class="label">Dolo</span></span><a
+            <li><span class="icon solid fa-code major style3"><span class="label">Dolo</span></span><a
+
                 href="#"></a></li>
           </ul>
         </div>
