--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
   </head>
-  <body class="landing is-preload">
-    <!-- Page Wrapper -->
+  <body class="landing is-preload"><!-- Page Wrapper -->
     <div id="page-wrapper">
       <!-- Header -->
       <header id="header" class="alt">
-        <h1><a href="index.html">Spectral</a></h1>
+        <h1><a href="index.html">MadeInRp</a></h1>
         <nav id="nav" style="left: 1415px; width: 1px;">
           <ul>
             <li class="special"> <br>
               <div id="menu">
                 <ul>
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="generic.html">Generic</a></li>
-                  <li><a href="elements.html">Elements</a></li>
-                  <li><a href="#">Sign Up</a></li>
-                  <li><a href="#">Log In</a></li>
+                  <li><a href="generic.html">Regolamento Discord</a></li>
+                  <li><a href="elements.html">I Creatori</a></li>
+                  <li><a href="#"></a><br>
+                  </li>
+                  <li><a href="#"></a><br>
+                  </li>
                 </ul>
               </div>
             </li>
@@ -38,7 +39,9 @@
           <p>Un roleplay completamente italiano</p>
           <ul class="actions special">
             <li><a href="https://discord.gg/J7zyYgTa2y" class="button primary">il
-                discord</a><a href="#one" class="more scrolly">i creatori</a></li>
+                discord</a></li>
+            <li><a href="regolamento.html" class="button primary">Il regolamento</a><a
+                href="#one" class="more scrolly">i creatori</a></li>
           </ul>
         </div>
       </section>
@@ -46,12 +49,11 @@
         <div class="inner">
           <header class="major">
             <h2>i creatori di novacity</h2>
-            <p>NovaCity RP è stata resa possibile grazie ad Filipeti,
-              ImNotPalma, ImAndrew</p>
+            <p>NovaCity RP è stata resa possibile grazie a Filipeti, ImNotPalma,
+              ImAndrew</p>
           </header>
           <ul class="icons major">
             <li><span class="icon solid fa-code major style3"><span class="label">Dolo</span></span><a
-
                 href="#"></a></li>
           </ul>
         </div>
